# files_manager_module

./: LICENSE  README.md  pyproject.toml
files_manager_module/base/base_services/: json_services.py
files_manager_module/config/: files_manager_module_config.json  files_manager_module_config.py
files_manager_module/objects/: files_objects.py
files_manager_module/services/: documents_handler.py  images_handler.py  renamer.py  video_handler.py
files_manager_module/static/: config.json
